# origo

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CREDITS.md  LICENSE  NOTICE  README.md  doompch.cpp  doompch.h  generate.sh  imgui.ini  overview.sh  pch.h  perf.data  run.sh
editor/: AssetCreationPlanning.txt  CMakeLists.txt
editor/include/: EditorContext.h
editor/include/components/: EditorMeshRenderer.h  EditorSelection.h  FallComponent.h
editor/include/controllers/: EditorCameraController.h  EditorContext.h  EditorUIPanelController.h
editor/include/layer/: EditorCameraLayer.h  EditorUILayer.h  LayerType.h  RenderLayer.h  SceneLayer.h  UpdateLayer.h
editor/include/panels/: AssetInspectorPanel.h  AssetPanel.h  AssetsPanel.h  ConsolePanel.h  EditorPanel.h  EntityInspectorPanel.h  HierarchyPanel.h  InspectorPanel.h  PanelManager.h  RuntimeStatePanel.h  SceneViewport.h
editor/include/state/: EditorContext.h  EditorRuntimeState.h  EditorViewMode.h
editor/include/systems/: EditorCamera.h  EditorOutlineRenderSystem.h  EditorRuntimeController.h  EditorSelectionSystem.h  FallSystem.h
editor/include/ui/: ComponentDrawRegistry.h  ComponentDrawer.h  ComponentUI.h  EditorPalette.h  IComponentDrawer.h  InspectorDrawRegistry.h  InspectorDrawable.h  InspectorDrawableRegistry.h  UI.h
editor/include/viewport/: EditorViewportController.h
editor/src/: EditorMain.cpp  EditorMain.h  Main.cpp
editor/src/components/: DrawEmissionShapeGUIControl.h  EditorMeshRendererSystem.cpp  EditorOutline.cpp  EditorOutline.h  EditorOutlineComponent.cpp  FallComponent.cpp  FallComponent.h
editor/src/controllers/: EditorCameraController.cpp  EditorController.cpp
editor/src/layers/: EditorCameraLayer.cpp  EditorCameraLayer.h  EditorUILayer.cpp  EditorUILayer.h  LayerType.h  RenderLayer.cpp  RenderLayer.h  SceneLayer.cpp  SceneLayer.h  UpdateLayer.cpp  UpdateLayer.h
editor/src/panels/: AssetBrowserState.cpp  AssetBrowserState.h  AssetCreationService.cpp  AssetCreationService.h  AssetInspectorPanel.cpp  AssetInspectorPanel.h  AssetInteraction.cpp  AssetInteraction.h  AssetLayout.cpp  AssetLayout.h  AssetPanel.cpp  AssetPanel.h  AssetPanelTree.cpp  AssetThumbnailGenerator.cpp  AssetThumbnailGenerator.h  AssetTileRenderer.cpp  AssetTileRenderer.h  AssetsPanel.cpp  ConsolePanel.cpp  ConsolePanel.h  DebugStatsPanel.cpp  DebugStatsPanel.h  EditorAssetTree.cpp  EditorAssetTree.h  EditorAssetVirtualPath.cpp  EditorAssetVirtualPath.h  EditorPanel.h  EntityInspectorPanel.cpp  EntityInspectorPanel.h  FilesPanel.cpp  FilesPanel.h  GeometryThumbnailRenderer.cpp  GeometryThumbnailRenderer.h  HierachyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  MaterialThumbnailRenderer.cpp  MaterialThumbnailRenderer.h  PanelManager.cpp  PanelManager.h  (+6 more)
editor/src/state/: EditingSessionType.h  EditorContext.cpp  EditorContext.h  EditorEditSessionType.h  EditorRuntimeState.h  EditorViewMode.h
editor/src/systems/: AssetInspectorDrawRegistry.cpp  AssetInspectorDrawer.cpp  AssetInspectorDrawer.h  AssetThumbnailCache.cpp  AssetThumbnailCache.h  EditorCamera.cpp  EditorCamera.h  EditorIcons.cpp  EditorIcons.h  EditorOutlineRenderSystem.cpp  EditorOutlineRenderSystem.h  EditorRuntimeController.cpp  EditorRuntimeController.h  EditorSelectionSystem.cpp  EditorSelectionSystem.h  FallSystem.cpp
editor/src/ui/: BoxColliderComponentDrawer.cpp  CameraComponentDrawer.cpp  CameraDrawer.cpp  CameraShakeComponentDrawer.cpp  CameraShakeDrawer.cpp  ComponentUI.cpp  ComponentUI.h  DirectionalLightComponentDrawer.cpp  DirectionalLightDrawer.cpp  EditorDrawer.cpp  EditorNotificationSystem.cpp  EditorNotificationSystem.h  EditorPalette.h  FallComponentDrawer.cpp  IInspectorDrawable.h  InspectorComponentRenderer.cpp  InspectorComponentRenderer.h  InspectorDrawRegistry.cpp  InspectorDrawRegistry.h  LightDrawer.cpp  (+18 more)
editor/workspace/: imgui.ini
game/: CMakeLists.txt
game/src/: Main.cpp  Zombie.cpp
origo/: CMakeLists.txt  Camera.cpp
origo/assets/: Asset.h  AssetDatabase.cpp  AssetFactory.h  AssetManager.cpp  CubemapTexture.cpp  Mesh.h  Metadata.h  Prefab.cpp  PrimitiveShape.cpp  PrimitiveShapeCache.cpp  PrimitiveShapeCache.h  SceneAsset.h  Shader.cpp  Shader.h  ShaderSource.cpp  SkyboxDefault.cpp  SkyboxMaterial.cpp  UniformList.cpp
origo/audio/: AudioEngine.cpp
origo/components/: BoxColliderComponent.cpp  BoxColliderComponent.h  CameraShakeComponent.cpp  Component.h  DirectionalLightComponent.cpp  DirectionalLightComponent.h  EditorHiddenComponent.cpp  EditorHiddenComponent.h  ModelRendererComponent.cpp  ModelRendererComponentSystem.h  PointLightComponent.cpp  PointLightData.h  RigidbodyComponent.cpp  SoundEmitterComponent.cpp  SpotLightComponent.h  TerrainComponent.h
origo/core/: Action.h  Application.cpp  Application.h  ConsoleSink.h  Init.cpp  Layer.cpp  Layer.h  LayerSystem.h  Logger.cpp  PathContext.cpp  PathContext.h  RID.h  ScreenWindow.cpp  Typedefs.h  UUID.h
origo/events/: Event.h  KeyEvent.cpp  KeyEvent.h  WindowEvent.cpp  WindowEvent.h
origo/imgui/: ImGuiLayer.cpp  ImGuiLayer.h
origo/renderer/: FrameBuffer.h  GeometryHeap.cpp  GeometryHeapRegistry.cpp  GeometryHeapRegistry.h  GlDebug.h  GridRenderer.cpp  GridRenderer.h  Helpers.cpp  Helpers.h  IndexBuffer.cpp  IndexBuffer.h  PBRParameters.cpp  RenderContext.cpp  RenderContext.h  RenderView.h  VaoCache.cpp  VaoCache.h  VertexArray.h  VertexAttribute.h  VertexLayout.cpp  VertexLayoutRegistry.h
origo/scene/: GamePhase.h  Scene.cpp  Scene.h  SceneCommand.h  SystemScheduler.h
origo/scripting/: ScriptComponentDescriptor.h  ScriptComponentInstance.h  ScriptComponentManager.cpp  ScriptComponentManager.h  ScriptComponentRegistry.h  ScriptRegistry.cpp  ScriptSystem.cpp  ScriptSystem.h  Variant.h
origo/serialization/: ISerializer.cpp  JsonSerializer.cpp
origo/utils/: Singleton.h
tests/: CMakeLists.txt  CTestTestfile.cmake
tests/src/: CameraComponentSerializationTest.cpp  JsonSerializerTest.cpp  Main.cpp  PrefabSerializationTest.cpp  RIDTest.cpp  SceneAssetSerializationTest.cpp  SceneSerializationTest.cpp  ScriptAssetSerializationTest.cpp  UUIDTest.cpp
(+797 files in other folders)
